tests/fixtures/negative/regex_literals/002_bad_quantifier.js
// Expected error: malformed character class.
const r = /[ab/
